--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ asgiref==3.7.2
 Django==4.2.5
 sqlparse==0.4.4
 typing_extensions==4.8.0
-pillow==10.0.1
-
+pillow==10.0.1 #for working with images
+django-cleanup==8.0.0 #for clean and delete old and not used image and another mediafiles
