--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ sqlparse==0.4.4
 typing_extensions==4.8.0
 pillow==10.0.1 #for working with images
 django-cleanup==8.0.0 #for clean and delete old and not used image and another mediafiles
+bootstrap==5.3.2
